plugins {
    id 'com.github.johnrengelman.shadow' version '5.2.0'
    id 'java'
    id 'application'
}

group 'fi.hsl'
version '1.0-SNAPSHOT'

sourceCompatibility = 11

application {
    mainClassName = 'fi.hsl.suomenlinna_hfp.Main'
}

jar {
    manifest {
        attributes 'Main-Class': 'fi.hsl.suomenlinna_hfp.Main'
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'

    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.2'
    implementation 'org.apache.commons:commons-csv:1.7'
    implementation 'com.typesafe:config:1.4.0'
    implementation 'com.github.ben-manes.caffeine:caffeine:2.8.1'

    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
    implementation group: 'ch.qos.logback.contrib', name: 'logback-json-classic', version: '0.1.5'
}
